src/test/ui/span/borrowck-object-mutability.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-object-mutability.rs:8:5
   |
LL | fn borrowed_receiver(x: &dyn Foo) {
   |                         -------- help: consider changing this to be a mutable reference: `&mut dyn Foo`
LL |     x.borrowed();
LL |     x.borrowed_mut();
   |     ^^^^^^^^^^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0596]: cannot borrow `*x` as mutable, as `x` is not declared as mutable
  --> $DIR/borrowck-object-mutability.rs:18:5
   |
LL | fn owned_receiver(x: Box<dyn Foo>) {
   |                   - help: consider changing this to be mutable: `mut x`
LL |     x.borrowed();
LL |     x.borrowed_mut();
   |     ^^^^^^^^^^^^^^^^ cannot borrow as mutable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
